applications/mariadb-pv/ingress-phpmyadmin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-phpmyadmin
spec:
  rules:
  - host: pma-mariadb-pv.microk8s.local
    http:
      paths:
      - backend:
          serviceName: phpmyadmin
          servicePort: 80
